# rust-snake

./: .gitignore  .gitmodules
docs/: game.wasm  index.md
game/: .gitignore  Cargo.toml  index.html
game/src/: components.rs  events.rs  main.rs  quad.frag  quad.vert  sprite.frag  sprite.vert  types.rs  ui.rs  utils.rs
game/src/assets/: mod.rs
game/src/components/: mod.rs  snake_head.rs
game/src/graphics/: font.rs  mod.rs  renderer.rs  ui.rs
game/src/shaders/: mod.rs  screen.frag  screen.rs  screen.vert  sprite.frag  sprite.rs  sprite.vert  ui.frag  ui.rs  ui.vert
game/src/stages/: game.rs  mod.rs  paused.rs
game/src/systems/: mod.rs
game/src/ui/: mod.rs
game/src/utils/: mod.rs
