[package]
name = "game"
version = "0.1.0"
authors = ["Justin Hurstwright <jryanhurst@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fontdue = { git = "https://github.com/MajorHard/fontdue.git" }
glam = "0.10.2"
hecs = "0.3.1"
miniquad = "0.3.0-alpha.22"
quad-rand = "0.1.1"
megaui = { path = "../megaui" }